# CountingHouses

./: .gitignore  LICENSE  README.md  credentials.txt  entrypoint.py  pyproject.toml
models/: README.md
src/: counter.py  google_maps.py  house_detector.py  image_handler.py
src/house_detection/: DETR_house_detector.py  house_detector.py  yolo_house_detector.py
test/: test_entrypoint.py  test_get_google_maps_api.py  test_house_detector.py
test/integration/: test_detr_house_detector.py
test/unit/: test_get_google_maps_api.py  test_house_detector.py
