[tool.poetry]
name = "counting-houses"
version = "0.1.0"
description = ""
authors = ["ClaraTump"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
requests = "^2.32.3"
matplotlib = "^3.9.1"
opencv-python = "^4.10.0.84"
torch = "^2.3.1"
torchvision = "^0.18.1"
yolov5 = "^7.0.13"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
